--- a/src/bin/Financial.dproj
+++ b/src/bin/Financial.dproj
@@ -139,6 +139,11 @@ $(PreBuildEvent)]]></PreBuildEvent>
             <Form>formUsuarios</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="..\model\untDataModelUsuarios.pas">
+            <Form>DMusuarios</Form>
+            <FormType>dfm</FormType>
+            <DesignClass>TDataModule</DesignClass>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
