--- a/src/bin/Financial.dproj
+++ b/src/bin/Financial.dproj
@@ -145,6 +145,10 @@ $(PreBuildEvent)]]></PreBuildEvent>
             <DesignClass>TDataModule</DesignClass>
         </DCCReference>
         <DCCReference Include="..\util\untUtilitarios.pas"/>
+        <DCCReference Include="..\view\untLogin.pas">
+            <Form>formLogin</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
